--- a/AiSD/AiSD.vcxproj
+++ b/AiSD/AiSD.vcxproj
@@ -20,9 +20,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
+    <ClCompile Include="menu.c" />
     <ClCompile Include="sort.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="menu.h" />
     <ClInclude Include="sort.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
