--- a/AiSD/AiSD.vcxproj.filters
+++ b/AiSD/AiSD.vcxproj.filters
@@ -25,7 +25,7 @@
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
     <ClCompile Include="timer.c">
-      <Filter>Pliki nagłówkowe</Filter>
+      <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
